tests/compile_fail/serialize_inference_view.stderr
error[E0277]: the trait bound `InferenceView<'_>: serde::Serialize` is not satisfied
 --> tests/compile_fail/serialize_inference_view.rs:5:10
  |
5 | #[derive(Serialize)]
  |          ^^^^^^^^^ the trait `Serialize` is not implemented for `InferenceView<'_>`
6 | struct Wrapper<'a> {
7 |     view: InferenceView<'a>,
  |     ---- required by a bound introduced by this call
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `InferenceView<'_>` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `_serde::ser::SerializeStruct::serialize_field`
 --> $CARGO/serde_core-$VERSION/src/ser/mod.rs
  |
  |     fn serialize_field<T>(&mut self, key: &'static str, value: &T) -> Result<(), Self::Error>
  |        --------------- required by a bound in this associated function
  |     where
  |         T: ?Sized + Serialize;
  |                     ^^^^^^^^^ required by this bound in `SerializeStruct::serialize_field`
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
